--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
     <ul id="nav">
         <a href="index.html"><li>DASHBOARD</li></a>
         <a href="contributor.html"><li>CONTRIBUTORS</li></a>
+        <a href="feed-back.html"><li>FEEDBACKS RECEIVED</li></a>
     </ul>
     <center>
     <div class='tableauPlaceholder' id='viz1683980643948' style='position: center'>
